# toolbox

./: .gitignore  ARCHITECTURE_GUIDE.md  DEVELOPMENT_PROMPT.md  GITHUB_INSTALL_GUIDE.md  INSTALL_GUIDE.md  LICENSE  MANIFEST.in  README.md  __init__.py  config_template.py  liquidaciones_standalone.py  prueba_directa.py  prueba_standalone.py  pyproject.toml  requirements.txt  setup.py  test_import.py
.github/workflows/: publish-to-codeartifact.yml
scripts/: install-toolbox.ps1  setup-codeartifact.sh
test/: conftest.py  test_basic_functionality.py  test_diferido_externo.py  test_diferido_interno.py  test_imports.py  test_isolated.py  test_kpi.py  test_liquidaciones.py  test_operaciones_fuera_sistema.py  test_sector_pagadores.py  test_settings.py  test_simple.py
toolbox/: __init__.py
toolbox/api/: __init__.py  comisiones_api.py  diferido_externo_api.py  diferido_interno_api.py  fondo_crecer_api.py  fondo_promocional_api.py  fondos_api.py  kpi_api.py  liquidaciones_api.py  operaciones_fuera_sistema_api.py  referidos_api.py  sector_pagadores_api.py  ventas_autodetracciones_api.py
toolbox/config/: __init__.py  secure_settings.py  settings.py
toolbox/core/: __init__.py  base.py  base_client.py  base_engine.py  base_transformer.py  base_validator.py
toolbox/engines/: __init__.py  comisiones_engine.py  diferido_externo_engine.py  diferido_interno_engine.py  fondo_crecer_engine.py  fondo_promocional_engine.py  kpi_engine.py  liquidaciones_engine.py  operaciones_fuera_sistema_engine.py  referidos_engine.py  sector_pagadores_engine.py  ventas_autodetracciones_engine.py
toolbox/io/: __init__.py  diferido_externo_client.py  diferido_interno_client.py  fondo_crecer_client.py  fondo_promocional_client.py  kpi_client.py  operaciones_fuera_sistema_client.py  referidos_client.py  sector_pagadores_client.py  ventas_autodetracciones_client.py
toolbox/processing/: __init__.py
toolbox/processing/transformers/: __init__.py  diferido_externo_transformer.py  diferido_interno_transformer.py  fondo_crecer_transformer.py  fondo_promocional_transformer.py  kpi_transformer.py  liquidaciones_transformer.py  operaciones_fuera_sistema_transformer.py  referidos_transformer.py  sector_pagadores_transformer.py  ventas_autodetracciones_transformer.py
toolbox/processing/validators/: __init__.py  diferido_externo_validator.py  diferido_interno_validator.py  kpi_validator.py  (+7 more)
toolbox/schemas/: __init__.py  comisiones_schema.py  diferido_externo_schema.py  diferido_interno_schema.py  fondo_crecer_schema.py  fondo_promocional_schema.py  liquidaciones_schema.py  operaciones_fuera_sistema_schema.py  referidos_schema.py  sector_pagadores_schema.py  ventas_autodetracciones_schema.py
